# hollow_os

./: packages.txt
frontend/: CMakeLists.txt
frontend/src/: desktoppage.cpp  desktoppage.h  main.cpp  mainwindow.cpp  mainwindow.h  orchestrator.cpp  orchestrator.h
orchestrator/: index.ts  package.json
orchestrator/actions/: disk.ts  install.ts  update.ts  wifi.ts
